# dmm-game-bot-rs

./: .gitignore  CHECKPOINT.md  Cargo.toml
DESIGN/: 01-overview-and-scope.md  02-architecture.md  03-runtime-flow.md  04-vision-and-templates.md  05-platform-windows.md  06-config-schema.md  07-cli.md  08-safety-and-errors.md  09-testing.md  10-build.md  11-coord-cache.md  README.md
config/: default.toml
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/bot/: cycle.rs  humanize.rs  mod.rs  sequence.rs
src/domain/: action.rs  mod.rs  step.rs
src/platform/: capture.rs  dpi.rs  input.rs  mod.rs  window.rs
src/vision/: coord_cache.rs  coords.rs  matcher.rs  mod.rs  template.rs
templates/: README.md  dmm-game-bot_architecture.md
