[package]
name = "dmm-game-bot"
version = "0.1.0"
edition = "2021"
description = "DMM browser game automation bot (template-matching based)"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
image = "0.25"
imageproc = "0.25"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rand = "0.8"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Storage_Xps",
]

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"
